--- a/public/assets/css/dashboard-style.css
+++ b/public/assets/css/dashboard-style.css
@@ -1114,7 +1114,7 @@ body {
 
 .modal-content {
     border: none;
-    border-radius: 0px;
+    border-radius: 20px;
     padding: 5px 20px;
 }
 
@@ -1474,4 +1474,140 @@ body {
     font-family: 'DM Sans';
     border-radius: 50px;
     padding: 10px 34px;
+}
+
+
+.card {
+    background: rgb(255, 255, 255);
+    padding: 30px;
+    border-radius: 16px !important;
+    border: none !important;
+}
+
+label {
+    font-size: 13px;
+    color: #434343;
+    font-weight: 500 !important;
+    font-family: 'DM Sans';
+}
+
+
+.checkout-wrapper .card-header {
+    border: none;
+    padding: 0px 16px !important;
+    color: #212121;
+    font-weight: 800;
+}
+
+.checkout-wrapper .table td,
+.checkout-wrapper .table th {
+    padding: 15px 0px;
+    vertical-align: top;
+    border-top: 1px solid #dee2e6;
+    color: #666;
+}
+
+.dashboard_item .small-box {
+    border-radius: 20px;
+    background-color: #ffffff;
+}
+
+
+.dashboard_item .small-box p {
+    margin: 0;
+    font-size: 13px;
+    font-family: 'Inter';
+}
+
+.dashboard_item .small-box>.inner {
+    padding: 15px 17px;
+}
+
+.dashboard_item .small-box h3 {
+    font-size: 26px;
+    color: #212121;
+}
+
+.connection_view h5 {
+    color: #3a3a3a;
+    font-size: 15px;
+    font-weight: 400;
+    margin: 0;
+}
+
+.connection_view span {
+    font-size: 14px;
+    color: #212121;
+    font-weight: 500;
+}
+
+.switch-wrapper {
+    position: relative;
+    display: inline-flex;
+    border-radius: 20px;
+    background: white;
+}
+
+.switch-wrapper [type="radio"] {
+    position: absolute;
+    left: -9999px;
+}
+
+.switch-wrapper [type="radio"]:checked#monthly~label[for="monthly"],
+.switch-wrapper [type="radio"]:checked#yearly~label[for="yearly"] {
+    color: #fff;
+}
+
+.switch-wrapper [type="radio"]:checked#monthly~label[for="monthly"]:hover,
+.switch-wrapper [type="radio"]:checked#yearly~label[for="yearly"]:hover {
+    background: transparent;
+}
+
+.switch-wrapper [type="radio"]:checked#monthly+label[for="yearly"]~.highlighter {
+    transform: none;
+}
+
+.switch-wrapper [type="radio"]:checked#yearly+label[for="monthly"]~.highlighter {
+    transform: translateX(100%);
+}
+
+.switch-wrapper label {
+    font-size: 14px;
+    z-index: 1;
+    cursor: pointer;
+    border-radius: 20px;
+    transition: color 0.25s ease-in-out;
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    line-height: 44px;
+    padding: 0px 36px 30px 30px;
+    width: 100%;
+    display: inline-block;
+    height: 47px;
+}
+
+.switch-wrapper .highlighter {
+    position: absolute;
+    top: 3px;
+    left: 4px;
+    width: calc(49% - 4px);
+    height: calc(100% - 8px);
+    border-radius: 20px;
+    background: #212121;
+    transition: transform 0.25s ease-in-out;
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 500px) {
+    .card {
+        padding: 10px;
+    }
 }
