--- a/public/assets/css/card-style.css
+++ b/public/assets/css/card-style.css
@@ -117,9 +117,9 @@ a {
 }
 
 .save_contact .btn-secondary {
-    background: #fff !important;
-    color: #212121;
-    border-color: #fff;
+    /* background: #fff !important; */
+    /* color: #212121; */
+    /* border-color: #fff; */
 }
 
 .save_contact a:hover {
