--- a/public/assets/css/card-style.css
+++ b/public/assets/css/card-style.css
@@ -360,6 +360,11 @@ a {
     right: 15px !important;
 }
 
+.offcanvas.show:not(.hiding),
+.offcanvas.showing{
+    bottom:0;
+}
+
 .contact_modal.offcanvas-bottom {
     width: 441px;
     height: 625px;
@@ -370,7 +375,7 @@ a {
     background: rgb(255, 255, 255);
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
-    bottom: 0px;
+    bottom: -20px;
     color: rgb(51, 51, 51);
     margin: 0px auto;
     transform-origin: center bottom;
@@ -380,7 +385,6 @@ a {
     -ms-transition: all 0.1s ease-in-out !important;
     -o-transition: all 0.1s ease-in-out !important;
 }
-
 
 .contact_modal .offcanvas-header button {
     -webkit-box-align: center;
