--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1046,27 +1046,21 @@ body {
         page-break-after: avoid;
     }
 }
-
-
 .form-control {
     padding: 13px 24px;
     align-items: center;
     background-color: #F7F7F7 !important;
-    /* border: none; */
     border-radius: 9px;
     height: 48px;
     font-size: 14px;
-    /* color: #111; */
     display: block;
     width: 100%;
     padding: 0.375rem 0.75rem;
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
-    /* background-color: #fff; */
     background-clip: padding-box;
     border: 1px solid #ced4da;
-    /* border-radius: 0.25rem; */
     box-shadow: inset 0 0 0 transparent;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
@@ -1074,5 +1068,8 @@ body {
     font-size: 13px;
     color: #434343;
     font-weight: 500 !important;
-    font-family: 'DM Sans';
+}
+
+.login_wrapper.min-height {
+    min-height: 600px;
 }
