--- a/public/assets/css/dashboard-responsive.css
+++ b/public/assets/css/dashboard-responsive.css
@@ -44,7 +44,7 @@
     }
 
     .about_user #logofile {
-        margin:0 auto;
+        margin: 0 auto;
     }
 }
 
@@ -80,6 +80,12 @@
 
     .setting_tab_contetn {
         padding: 0px 0px;
+    }
+}
+
+@media screen and (max-width:575px) {
+    .company_group .slim{
+        margin:inherit;
     }
 }
 
