iconbg dynamic change

--- a/public/assets/css/card-style.css
+++ b/public/assets/css/card-style.css
@@ -185,7 +185,7 @@ a {
     font-weight: 400;
 }
 
-.contact_modal .form-control {
+.form-control {
     background: #f7f7f7 !important;
     border: 1px solid #fff;
     height: 50px;
