--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1080,3 +1080,44 @@ body {
 .loading-spinner.active {
     display: inline-block;
 }
+video.banner-video {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.current-plan-btn {
+    color: rgba(0, 0, 0, 0.26);
+    box-shadow: none;
+    background-color: rgba(0, 0, 0, 0.12) !important;
+    cursor: default;
+    pointer-events: none;
+    width: 100%;
+    font-size: 13px;
+    box-shadow: none;
+    font-weight: 600;
+    border-radius: 100px;
+}
+
+.btn-primary {
+    background: #212121;
+    border: none !important;
+    outline: none;
+    box-shadow: none;
+    padding: 12px 42px !important;
+    border-radius: 50px !important;
+    font-size: 13px;
+}
+
+/* .card {
+    box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%);
+    margin-bottom: 1rem;
+} */
+.pricing-card {
+    border: solid 1px #bdbdbd;
+    cursor: pointer;
+    height: 600px;
+    padding: 24px;
+    border-radius: 20px;
+    background-color: #fff;
+}
