--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -750,67 +750,222 @@ body {
 }
 
 
+.product_item {
+    border: 1px solid #f1f1f1;
+    border-radius: 5px;
+
+}
+
+.product_title h3 a {
+    font-size: 18px;
+    color: #212121;
+    letter-spacing: 1px;
+}
+
+.product_title h3 {
+    margin: 0;
+}
+
+.product_article p {
+    margin: 0;
+    font-size: 14px;
+    color: #212121;
+    font-weight: 500;
+    vertical-align: middle;
+}
+
+.product_article p a {
+    border: 1px solid #21212196;
+    color: #212121;
+    padding: 8px 22px;
+    display: inline-block;
+    border-radius: 50px;
+    font-size: 12px;
+    font-weight: 600;
+    vertical-align: middle;
+    align-items: center;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+}
+
+.product_article p a:hover {
+    background: #212121;
+    color: #fff;
+}
+
+.product_article span {
+    font-size: 18px;
+    font-weight: 600;
+    font-family: 'Gilroy-Light', s;
+    display: inline-block;
+    align-items: center;
+    vertical-align: middle;
+    margin-top: 6px;
+}
 
 
+.product_content {
+    background: #fafafa;
+    padding: 10px;
+}
+
+.single_pro_content h2 {
+    font-size: 20px;
+    font-family: 'Gilroy-Light', sans-serif;
+    font-weight: 600;
+    margin-bottom: 11px;
+    color: #212121;
+}
+
+.single_pro_content span {
+    font-size: 20px;
+    font-family: 'Gilroy-Light', sans-serif;
+    font-weight: 600;
+    margin-bottom: 11px;
+    color: #373737;
+    letter-spacing: 1px;
+}
 
 
+.single_pro_content p i {
+    font-size: 13px;
+    color: #ffc107;
+}
 
+.single_pro_content p span {
+    font-size: 14px !important;
+    font-family: 'Gilroy-Light', sans-serif;
+    font-weight: 600;
+}
 
+.single_pro_content p {
+    margin: 15px 0px;
+}
 
+.single_pro_content .custome_control {
+    border: 1px solid #DDD;
+    height: 41px;
+    font-size: 14px;
+    font-family: 'Gilroy-Light', sans-serif;
+    font-weight: 700;
+    outline: none !important;
+    box-shadow: none !important;
+    width: 100px;
+}
 
+.single_pro_content .input-group .btn {
+    background: #e9e9e9 !important;
+    border-radius: 2px;
+    height: 41px;
+    font-size: 14px;
+    color: #222 !important;
+    border: none !important;
+}
 
+.qtyfield span {
+    color: #212121;
+    display: block;
+    font-size: 17px;
+    font-family: 'Gilroy-Light', sans-serif;
+}
 
+.add_to_cart a {
+    background: #212121;
+    border: none !important;
+    outline: none;
+    box-shadow: none;
+    padding: 14px 42px !important;
+    border-radius: 50px !important;
+    font-size: 15px;
+    color: #fff;
+    font-family: 'Gilroy-Light', s;
+    font-weight: 500;
+}
 
+.add_to_cart a:hover {
+    background-color: #424649;
+}
 
+.details_tabs .nav-tabs .nav-link {
+    font-size: 14px;
+    font-weight: 600;
+    outline: none !important;
+    box-shadow: none !important;
+    color: #222;
+}
 
+.single_pro_details {
+    padding: 21px 0px;
+}
 
+.single_pro_details p {
+    margin: 0;
+    font-size: 15px;
+    line-height: 25px;
+    color: #777;
+    margin-bottom: 20px;
+}
 
+.single_pro_details ul li {
+    font-size: 15px;
+    line-height: 30px;
+    color: #555;
+}
 
+.singel_pro_gallery .flickity-page-dots {
+    display: none;
+}
 
+.singel_pro_gallery .carousel-nav .carousel-cell {
+    margin-right: 10px;
+    background: #f1f1f1;
+    padding: 2px;
+    border-radius: 10px;
+}
 
+.carousel-cell.is-selected.is-nav-selected {
+    background: #c62f00;
+}
 
+.singel_pro_gallery .carousel-nav .carousel-cell img {
+    width: 100px !important;
+    height: 80px;
+    margin-right: -1px;
+    counter-increment: carousel-cell;
+    border-radius: 10px;
+}
 
+.singel_pro_gallery {
+    border: 1px solid #f5f5f5;
+    border-radius: 13px;
+    padding: 10px;
+}
 
+.singel_pro_gallery .carousel.carousel-nav .flickity-prev-next-button{
+    display: none;
+}
 
+.flickity-prev-next-button {
+    border-radius: 5px !important;
+}
 
+.gallery_single .singel_pro_gallery .flickity-prev-next-button .flickity-button-icon {
+    left: 18%;
+}
 
+.gallery_single .flickity-button.flickity-prev-next-button.previous svg {
+    left: 11px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.short_info p {
+    font-size: 15px;
+    line-height: 26px;
+    color: #888;
+    margin: 0;
+}
 
 
 
@@ -1003,11 +1158,11 @@ body {
     }
 
     a[href]::after {
-        content: " ("attr(href) ")";
+        content: " (" attr(href) ")";
     }
 
     abbr[title]::after {
-        content: " ("attr(title) ")";
+        content: " (" attr(title) ")";
     }
 
     /*
@@ -1046,6 +1201,7 @@ body {
         page-break-after: avoid;
     }
 }
+
 .form-control {
     padding: 13px 24px;
     align-items: center;
@@ -1062,9 +1218,10 @@ body {
     background-clip: padding-box;
     border: 1px solid #ced4da;
     box-shadow: inset 0 0 0 transparent;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
- label {
+
+label {
     font-size: 13px;
     color: #434343;
     font-weight: 500 !important;
@@ -1073,6 +1230,7 @@ body {
 .login_wrapper.min-height {
     min-height: 600px;
 }
+
 .loading-spinner {
     display: none;
 }
@@ -1080,6 +1238,7 @@ body {
 .loading-spinner.active {
     display: inline-block;
 }
+
 video.banner-video {
     width: 100%;
     height: auto;
