--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -941,7 +941,6 @@ body {
 .singel_pro_gallery {
     border: 1px solid #f5f5f5;
     border-radius: 13px;
-    padding: 10px;
 }
 
 .singel_pro_gallery .carousel.carousel-nav .flickity-prev-next-button{
@@ -967,47 +966,115 @@ body {
     margin: 0;
 }
 
+.shop_details_sec .user_reviews .header {
+    box-shadow: none;
+    border-bottom: 1px solid #212121;
+}
+
+.shop_details_sec .user_reviews .header h3 {
+    margin: 0;
+    font-size: 17px;
+    color: #212121;
+    font-weight: 500;
+}
+
+.shop_details_sec .user_reviews .header a {
+    padding: 11px 22px;
+    display: inline-block;
+    background: #212121;
+    border-radius: 50px;
+    color: #fff;
+    font-size: 14px;
+}
+
+.shop_details_sec .total_review h5 {
+    color: #212121;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.shop_details_sec .review_item .user_img img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    border: 1px solid #EEE;
+}
+
+.shop_details_sec .review_item .review_article h3 {
+    font-size: 14px;
+    font-weight: 600;
+    color: #212121;
+    margin-bottom: 8px;
+}
+
+.shop_details_sec .review_item .review_article h3 span {
+    color: #888;
+    font-weight: 500;
+}
+
+.star .star_icon {
+    color: orange;
+    font-size: 14px;
+}
+
+.shop_details_sec .review_article h4 {
+    color: #211221;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.shop_details_sec .review_article p {
+    margin: 0;
+    font-size: 14px;
+    line-height: 24px;
+    color: #666;
+}
+
+.shop_details_sec .review_item {
+    border-bottom: 1px solid #EEE;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+.shop_details_sec .review_form .title h3 {
+    color: #666;
+    font-size: 17px;
+    font-weight: 600;
+}
+
+.shop_details_sec .review_form .form-label {
+    font-size: 16px;
+    color: #777;
+    font-weight: 600;
+}
+
+.shop_details_sec .review_form .form-control {
+    height: 50px;
+    border: 1px solid #DDD;
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.shop_details_sec .review_form .btn-primary {
+    padding: 10px 48px !important;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.shop_details_sec .review_form .btn-primary:hover {
+    background: #dc3545;
+}
+
+.related_products .title h3 {
+    font-size: 24px;
+    font-weight: 600;
+    color: #212121;
+    margin: 0;
+}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.product_carousel_item .item {
+    margin: 10px;
+}
 
 
 
